fix issues with letter spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,7 +20,6 @@ body {
     text-align: center;
     margin-top: 30px;
     margin-bottom: 30px;
-    letter-spacing: 2px;
     background-color: black;
     width: 75%;
     margin: auto;
@@ -58,7 +57,6 @@ body {
 
 #mymenu {
     font-size: large;
-    letter-spacing: 2px;
     text-align: center;
     margin-top: 30px;
 }
@@ -84,7 +82,6 @@ body {
     width: 50%;
     height: 500px;
     float: right;
-    letter-spacing: 2px;
     text-align: center;
     font-size: 1rem;
 }
@@ -190,7 +187,6 @@ footer {
     background-color: black;
     margin-top: 30px;
     text-align: center;
-    letter-spacing: 2px;
 }
 #contact p {
     margin: 0;
@@ -297,7 +293,6 @@ footer {
 
 p {
     font-size: large;
-    letter-spacing: 2px;
     text-align: center;
     margin-top: 30px;
 }
@@ -307,18 +302,15 @@ footer a {
 
 #return {
     font-size: large;
-    letter-spacing: 2px;
     text-decoration: none;
 }
 
 .bottom {
     text-decoration: none;
-    letter-spacing: 2px;
     font-size: x-small;
 }
 .title {
     text-align: center;
     padding-top: 20px;
-    letter-spacing: 2px;
 }
 
